--- a/assets/sass/modules/_animate.scss
+++ b/assets/sass/modules/_animate.scss
@@ -21,48 +21,32 @@
 	100% { right:-40px; opacity:1;}
 }
 
-// animate bottom to up masonry
-@-webkit-keyframes moveUp {
-	0% { }
-	100% { -webkit-transform: translateY(0); opacity: 1; }
+// animate class
+.fromtop{
+	opacity:0;
+	margin-top:-40px;
 }
-
-@keyframes moveUp {
-	0% { }
-	100% { -webkit-transform: translateY(0); transform: translateY(0); opacity: 1; }
+.frombottom{
+	opacity:0;
+	margin-top:40px;
 }
-
-// animate bottom to up tooltips
-@keyframes animate__bottomtop__tooltips
-{
-	0% {
-		top:10px;
-		opacity:0;
-	}
-	100% {
-		top:0px;
-		opacity:1;
-	}
+.fromleft{
+	opacity:0;
+	margin-left:-30px;
 }
-
-@-webkit-keyframes animate__bottomtop__tooltips
-{
-	0% {
-		top:10px;
-		opacity:0;
-	}
-	100% {
-		top:0px;
-		opacity:1;
-	}
+.fromright{
+	opacity:0;
+	margin-left:20px;
 }
-
-// animate live record
-@keyframes blink {  
-    0% { background: #ff0000; }
-    100% { background: #f1f1f1; }
+.tonormal{
+	opacity:1;
+	margin:initial;
 }
-@-webkit-keyframes blink {
-    0% { background: #ff0000; }
-    100% { background: #f1f1f1; }
+.toleft{
+	opacity:1;
+	left:-30px;
+}
+.toright{
+	opacity:1;
+	right:-30px;
 }
