--- a/assets/sass/partials/_button.scss
+++ b/assets/sass/partials/_button.scss
@@ -5,13 +5,13 @@ button,a{
     @include delay (.2s all);
         &.share--btn{
             display: inline-block;
-            font-size:16px;
+            font-size:14px;
             font-weight:100;
             color:#fff;
             text-align: center;
-            padding:8px 14px;
+            padding:6px 12px 8px 12px;
             background:rgba(0, 0, 0, 0.2);
-            border-radius:25px;            
+            border-radius:25px;
             &:hover{
                 background:rgba(0, 0, 0, 0.4);
             }
@@ -19,9 +19,10 @@ button,a{
         &.newsletter--btn{
             @extend .share--btn;
             width:29%;
-            height:50px;
-            font-family: calibri;
-            font-size:22px;
+            height:45px;
+            font-family:"Open Sans";
+            font-size:18px;
+            font-weight:600;
             background:#ff6633;
             box-shadow: 0px 3px 0px #c1431f;
             border-radius:3px;
@@ -37,4 +38,8 @@ button,a{
 /* (1024px above)----------- */
 @media only screen 
 and (min-width : 1024px) {     
+}
+/* (1360 above)----------- */
+@media only screen 
+and (min-width : 1360) {     
 }
