--- a/assets/sass/partials/_header.scss
+++ b/assets/sass/partials/_header.scss
@@ -8,7 +8,7 @@
   padding:5px 0 0 0;
   z-index: 100;
     .header{
-      width:1100px;
+      // width:1100px;
       margin:0 auto;
         .logo__header{
           display: inline-block;
@@ -31,4 +31,42 @@
             }
         }
     }
+}
+
+/** responsive **/
+
+/* (0px above)----------- */
+@media only screen 
+and (min-width : 0px) {
+  .header{
+    width:95%;
+  }
+}
+
+/* (480px above)----------- */
+@media only screen 
+and (min-width : 480px) {
+}
+
+/* (768px above)----------- */
+@media only screen 
+and (min-width : 768px) {
+}
+
+/* (1024px above)----------- */
+@media only screen 
+and (min-width : 1024px) {  
+}
+
+/* (1360px above)----------- */
+@media only screen 
+and (min-width : 1360px) {
+  .header{
+    width:1100px;
+  }
+}
+
+/* (1900px above)----------- */
+@media only screen 
+and (min-width : 1900px) {
 }
