--- a/assets/sass/pages/_home.scss
+++ b/assets/sass/pages/_home.scss
@@ -330,7 +330,41 @@ and (min-width : 1360px) {
 	}
 }
 
+/* (1440px above)----------- */
+@media only screen 
+and (min-width : 1440px) {
+	.ss__page{
+		background-position: -53px !important;
+		.ss__page1{
+			background-position: -53px !important;
+		}
+	}
+	.page1{
+		width:960px;
+	}
+}
+
+/* (1680px above)----------- */
+@media only screen 
+and (min-width : 1680px) {
+	.ss__page{
+		background-position: 68px !important;
+		.ss__page1{
+			background-position: 68px !important;
+		}
+	}
+	.page1{
+		width:960px;
+	}
+}
+
 /* (1900px above)----------- */
 @media only screen 
 and (min-width : 1900px) {
+	.ss__page{
+		background-position: -187px !important;
+		.ss__page1{
+			background-position: -187px !important;
+		}
+	}
 }
